--- a/button-download/package.json
+++ b/button-download/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "criando-components-funcionais-react",
+  "name": "button-download",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
